# ritapi-advanced

./: .env  .env.demo  .env.example  .env.staging  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONFIGURATION.md  DEMO.md  DEPLOYMENT_STATES.md  Dockerfile  GO_LIVE_CHECKLIST.md  README.md  RITAPI_TODO.md  RUNBOOK.md  SLO.md  TODO.md  bootstrap.sh  build_usb.sh  docker-compose.yml  locustfile.py  nginx.conf  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sbom.json
.github/workflows/: ci.yml  release.yml
app/: main.py
app/auth/: api_key_handler.py  jwt_handler.py
app/middlewares/: auth.py  bot_detection.py  decision_engine.py  detection_schema.py  exfiltration_detection.py  hard_gate.py  injection_detection.py  rate_limit.py  request_id.py  schema_enforcement.py  tenant_context.py
app/policies/: service.py
app/rbac/: rbac_service.py
app/routing/: service.py
app/schemas/: payload_schema.py
app/security/: logger.py  security_event_logger.py  siem_export.py
app/utils/: ip_blocklist.py  jwt_denylist.py  logging.py  metrics.py  perf.py  redis_client.py  reload_broadcaster.py  (+2 more)
configs/: routing.yml
docker/: app.yml  demo.usb.yml  demo.yml  redis-sentinel.yml  redis-standalone.yml  sentinel.conf
docs/: CONFIGURATION.md  DEMO_REPORT_2026-04-07.md  ENGINE_GUARANTEES.md  EOD_REPORT_2026-04-06.md  EOD_REPORT_2026-04-08.md  GO_LIVE_CHECKLIST.md  INSTALL.md  MANUAL.md  PENTEST.md  PROOF_ARTIFACT_DETECTIONS_2026-04-01.md  RUNBOOK.md  RUNTIME_PROOF_ONLY_2026-04-01.md  ritapi_advanced_enforcement_validated.md  ritapi_strict_tenant_baseline.md  tenant_flow_current.md
logs/: ritapi_advanced.jsonl
rules/: credential_stuffing.yar  shell_injection.yar  sqli.yar  xss.yar
scripts/: backup.sh  build_deb.sh  build_hospital_package.sh  demo_attack.sh  demo_clean.sh  demo_run.sh  gen_cert.sh  logrotate.conf  redis_sentinel_setup.sh  release.sh  restore.sh  smoke_test.sh  validate_install.sh
tests/: conftest.py  test_admin.py  test_admin_dashboard_security.py  test_audit_consistency.py  test_auth.py  test_bot_detection.py  test_cache_invalidation.py  test_ddos_spike.py  test_decision_engine.py  test_decision_engine_siem_integration.py  test_edge_cases.py  test_exfiltration.py  test_hard_gate.py  test_health.py  test_ip_blocklist.py  test_jwt_revocation.py  test_latency_log.py  test_m7_decision_engine_routing.py  test_m7_hardgate_integration.py  test_metrics.py  test_perf_bot_burst.py  test_perf_burst.py  test_perf_injection_burst.py  test_pipeline_redis.py  test_rate_limit.py  test_rbac.py  test_redis_bugs.py  test_redis_fail_closed.py  test_redis_failover.py  test_reload_broadcast.py  test_request_id.py  test_security_event_correlation.py  test_siem_export.py  test_simulation.py  test_strict_tenant_mode.py  test_strict_tenant_runtime_proof.py  test_tenant_isolation.py  test_tenant_isolation_patch.py  test_tenant_status.py  test_throttle_real.py  (+2 more)
usb/: README.txt  demo.sh  stop.sh
(+43 files in other folders)
