[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ritapi-advanced"
version = "1.2.1"
description = "Layer-7 API protection service: WAF, rate limiting, bot detection, injection/exfiltration detection, JWT/API-key auth, RBAC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["waf", "api-security", "rate-limiting", "bot-detection", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.0",
    "yara-python>=4.5.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.20.0",
    "jinja2>=3.1.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.0.0",
    "pytest-cov>=5.0.0",
]
dev = [
    "ritapi-advanced[test]",
    "pip-tools>=7.0.0",
    "ruff>=0.4.0",
    "bandit>=1.7.0",
    "locust>=2.0.0",
]

[project.scripts]
ritapi = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Ruff — linter / formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "S"]
ignore = [
    "S101",   # assert statements (used in tests)
    "S105",   # hardcoded passwords (test fixtures)
    "S106",   # hardcoded passwords in function args
    "B008",   # do not perform function calls in default arguments (FastAPI Depends pattern)
]
per-file-ignores = { "tests/*" = ["S", "E501"], "app/main.py" = ["E402"], "tests/conftest.py" = ["E402"] }

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = ["app/web/templates/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
